# rust-http-server

./: .gitignore  CONFIG.md  Cargo.toml  config.toml  test_api.sh  test_features.sh
core_lib/: Cargo.toml
core_lib/src/: error.rs  lib.rs  metrics.rs  store.rs
core_lib/src/auth/: jwt.rs  mod.rs  models.rs  repository.rs  service.rs  tests.rs
core_lib/src/cache/: cache_test.sh  memory.rs  mod.rs
core_lib/src/config/: settings.rs
core_lib/src/database/: connection.rs  migration_service.rs  migrations.rs  mod.rs  models.rs  repository.rs
core_lib/src/extractors/: json.rs  mod.rs
core_lib/src/files/: manager.rs  mod.rs  models.rs  repository.rs  validation.rs
core_lib/src/handlers/: auth.rs  cache.rs  files.rs  health.rs  jobs.rs  metrics.rs  mod.rs  routes.rs
core_lib/src/health/: checks.rs  mod.rs  tests.rs
core_lib/src/jobs/: integration_test.rs  mod.rs  models.rs  queue.rs  repository.rs  worker.rs
core_lib/src/middleware/: auth.rs  cache.rs  comprehensive_middleware_tests.sh  cors.rs  essential_tests.sh  integration.rs  logging.rs  mod.rs  optional_auth.rs  rate_limit.rs  request_validation.rs
core_lib/src/models/: auth.rs  files.rs  items.rs  mod.rs  request.rs
core_lib/src/monitoring/: mod.rs  system.rs
core_lib/src/search/: advanced_filters.rs  cache.rs  engine.rs  filters.rs  mod.rs  query.rs
core_lib/src/services/: item_service.rs
core_lib/src/validation/: macros.rs  manual_validation_tests.md  middleware.rs  mod.rs  rules.rs  security.rs  validation_test.sh  validators.rs
core_lib/src/websocket/: handler.rs  manager.rs  messages.rs  mod.rs  tests.rs  websocket_test.html
core_lib/tests/: core_functionality_regression_test.rs  edge_case_tests.rs  integration_test.rs  simple_integration_test.rs  test_auth_fixes.rs
data/: app-copy.db  app.db  app.db-shm  app.db-wal
http_server/: Cargo.toml
http_server/src/: main.rs
scripts/: backward_compatibility_test.sh  cache_test.sh  comprehensive_middleware_tests.sh  essential_tests.sh  test_api.sh  test_features.sh  validation_script.sh
uploads/2025/07/: 46dd86f5-c043-4cae-bc6f-8c43b8dcfb96.txt
