[workspace]
members = ["core_lib", "http_server"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros", "json", "form"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
http = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"