[package]
name = "core_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }

sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
tempfile = { workspace = true }
lru = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
validator = { workspace = true }
lazy_static = { workspace = true }